syntax = "proto3";

package hookly.v1;

import "google/protobuf/timestamp.proto";

// Provider type for webhook signature verification
enum ProviderType {
  PROVIDER_TYPE_UNSPECIFIED = 0;
  PROVIDER_TYPE_STRIPE = 1;
  PROVIDER_TYPE_GITHUB = 2;
  PROVIDER_TYPE_TELEGRAM = 3;
  PROVIDER_TYPE_GENERIC = 4;
  PROVIDER_TYPE_CUSTOM = 5;
}

// Verification method for custom provider type
enum VerificationMethod {
  VERIFICATION_METHOD_UNSPECIFIED = 0;
  VERIFICATION_METHOD_STATIC = 1;        // Direct comparison of header value
  VERIFICATION_METHOD_HMAC_SHA256 = 2;   // HMAC-SHA256 of payload
  VERIFICATION_METHOD_HMAC_SHA1 = 3;     // HMAC-SHA1 of payload
  VERIFICATION_METHOD_TIMESTAMPED_HMAC = 4; // Timestamp + payload HMAC (like Stripe)
}

// Custom verification configuration for PROVIDER_TYPE_CUSTOM
message VerificationConfig {
  VerificationMethod method = 1;
  string signature_header = 2;           // Header containing the signature
  string signature_prefix = 3;           // Optional prefix to strip (e.g., "sha256=")
  string timestamp_header = 4;           // Header containing timestamp (for timestamped_hmac)
  int64 timestamp_tolerance = 5;         // Max age in seconds (default 300)
}

// Webhook delivery status
enum WebhookStatus {
  WEBHOOK_STATUS_UNSPECIFIED = 0;
  WEBHOOK_STATUS_PENDING = 1;
  WEBHOOK_STATUS_DELIVERED = 2;
  WEBHOOK_STATUS_FAILED = 3;
  WEBHOOK_STATUS_DEAD_LETTER = 4;
}

// Endpoint configuration
message Endpoint {
  string id = 1;
  string name = 2;
  ProviderType provider_type = 3;
  string destination_url = 4;
  bool muted = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  // Note: signature_secret is not exposed in API responses
  // Custom verification config (only for PROVIDER_TYPE_CUSTOM)
  VerificationConfig verification_config = 8;
}

// Webhook record
message Webhook {
  string id = 1;
  string endpoint_id = 2;
  google.protobuf.Timestamp received_at = 3;
  map<string, string> headers = 4;
  bytes payload = 5;
  bool signature_valid = 6;
  WebhookStatus status = 7;
  int32 attempts = 8;
  google.protobuf.Timestamp last_attempt_at = 9;
  google.protobuf.Timestamp delivered_at = 10;
  string error_message = 11;
}

// Pagination request parameters
message PaginationRequest {
  int32 page_size = 1;
  string page_token = 2;
}

// Pagination response metadata
message PaginationResponse {
  string next_page_token = 1;
  int32 total_count = 2;
}

// Connected endpoint info for status display
message ConnectedEndpoint {
  string id = 1;
  string name = 2;
}

// System status information
message SystemStatus {
  int32 pending_count = 1;
  int32 failed_count = 2;
  int32 dead_letter_count = 3;
  // Deprecated: use connected_endpoints instead
  bool home_hub_connected = 4 [deprecated = true];
  google.protobuf.Timestamp last_home_hub_heartbeat = 5 [deprecated = true];
  // Endpoints with active relay connections
  repeated ConnectedEndpoint connected_endpoints = 6;
}
